- do propose "Suisse" after selecting french language (#34675)
- use time() to know when to timeout (when launching installer X server)
  since the loop may be slower than 1 second (xf86misc::main::Xtest takes time
  on a failing X server on i810). Also print a message telling user to wait
  after 8 seconds.

Version 10.4.238 - 5 October 2007, by Pascal "Pixel" Rigaux

- do not use pseudo Protocol "vboxmouse" during install, use "IMPS/2" instead

Version 10.4.236 - 4 October 2007, by Pascal "Pixel" Rigaux

- fix copying of ../../i586/media/main medium 
  (for dual_arch CDs sharing the i586 medium)
- fix configuring kdeglobals (was broken because of /etc/kderc using
  udpate-alternatives which use absolute symlinks)

Version 10.4.233 - 4 October 2007, by Pascal "Pixel" Rigaux

- use /dev/cdrom in fstab, but do not write corresponding udev rule
  (the rules will be generated at boot time otherwise it won't catch the
  hdX/srX switch)

Version 10.4.232 - 4 October 2007, by Olivier "blino" Blin

- add helper to get kernel module path (to be used in draklive)

Version 10.4.228 - 3 October 2007, by Pascal "Pixel" Rigaux

- use /dev/cdrom in fstab, and write corresponding udev rule
  (the rules were generated at boot time but here we ensure consistent naming)
- 2008 logo
- bootloader:
  o if there is a /boot, check /boot instead of "/" to allow grub or not

Version 10.4.227 - 2 October 2007, by Thierry Vignaud

- diskdrake:
  o improved wrapping of mount option descriptions (#19848)
- add ath5k module in wireless category

Version 10.4.224 - 1 October 2007, by Pascal "Pixel" Rigaux

- don't keep noarch pkgs symlinked (to ../../../i586/media/main/xxx.rpm)
  when copying packages on disk

Version 10.4.223 - 1 October 2007, by Pascal "Pixel" Rigaux

- diskdrake:
  o bugfix 10.4.162: allow "LVM" on RAID (#34359)
- add acpi-cpufreq support for some Intel CPUs (family 6 model 15)
  (from Herton Ronaldo Krzesinski, #30208)
